[gd_scene load_steps=11 format=3 uid="uid://cgf3rds5kcvk"]

[ext_resource type="Texture2D" uid="uid://hx8b4e0asqoa" path="res://Escenas/Menú de Tienda/Fondo.png" id="1_iupnt"]
[ext_resource type="Script" uid="uid://bvkib4twq17me" path="res://Escenas/Menú de Tienda/menu_tienda.gd" id="1_iypld"]
[ext_resource type="Texture2D" uid="uid://b16ygqbeuvvcx" path="res://Escenas/Menú de Tienda/OBTENER.png" id="2_iypld"]
[ext_resource type="Texture2D" uid="uid://cwkl3c5v3buua" path="res://Escenas/Menú de Tienda/MEJORAR.png" id="3_chu37"]
[ext_resource type="Texture2D" uid="uid://bohqpty57kos5" path="res://Escenas/Menú de Tienda/VER.png" id="4_rvwtx"]
[ext_resource type="Texture2D" uid="uid://d37mjbktwvb6g" path="res://Escenas/Menú de Tienda/COMPRAR.png" id="5_8kip5"]
[ext_resource type="Script" uid="uid://dco3s4wbjelpu" path="res://Escenas/Menú de Tienda/modal_ads.gd" id="7_8kip5"]
[ext_resource type="Texture2D" uid="uid://pwhowfl3vkld" path="res://Escenas/Menú de Tienda/6fe8c1498de54c6f3f79210167260695.webp" id="8_2siv7"]
[ext_resource type="Texture2D" uid="uid://dbkvvnqgsox2l" path="res://Assets/Jugador/IZQUIERDA.png" id="9_5q8le"]
[ext_resource type="Script" path="res://color_rect.gd" id="10_2siv7"]

[node name="MenuTienda" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iypld")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_iupnt")

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_right = 681.0
offset_bottom = 46.0

[node name="Obtener" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 99.0
offset_top = 560.0
offset_right = 284.0
offset_bottom = 606.0
icon = ExtResource("2_iypld")

[node name="Mejorar" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 399.0
offset_top = 565.0
offset_right = 599.0
offset_bottom = 611.0
icon = ExtResource("3_chu37")

[node name="Ver" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 744.0
offset_top = 563.0
offset_right = 827.0
offset_bottom = 609.0
icon = ExtResource("4_rvwtx")

[node name="Comprar" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 982.0
offset_top = 562.0
offset_right = 1183.0
offset_bottom = 608.0
icon = ExtResource("5_8kip5")

[node name="Volver" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 62.0
offset_top = 43.0
offset_right = 116.875
offset_bottom = 99.729996
flat = true

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 1103.0001
offset_top = 4.999999
offset_right = 1174.0001
offset_bottom = 28.0
scale = Vector2(1.3632829, 1.6133125)

[node name="Modal_ads" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.179842, 1.0880406, 1.1339413, 0.44313726)
script = ExtResource("7_8kip5")

[node name="TextureRect2" type="TextureRect" parent="Modal_ads"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -286.0
offset_right = 604.0
offset_bottom = 652.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6103881, 0.6103881)
texture = ExtResource("8_2siv7")

[node name="Salir_ad" type="Button" parent="Modal_ads"]
layout_mode = 0
offset_left = 385.0
offset_top = 74.0
offset_right = 563.0
offset_bottom = 252.0
scale = Vector2(0.48000008, 0.48000008)
icon = ExtResource("9_5q8le")
flat = true

[node name="Timer" type="Timer" parent="Modal_ads"]
wait_time = 10.0

[node name="Modal_Compra" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.84635025, 0.84635025, 0.84635025, 0.41568628)
script = ExtResource("10_2siv7")

[node name="TextureRect" type="TextureRect" parent="Modal_Compra"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -286.0
offset_right = 605.0
offset_bottom = 652.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6065086, 0.61192364)
texture = ExtResource("8_2siv7")

[node name="Compra" type="Button" parent="Modal_Compra/TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -212.3609
offset_top = -147.05151
offset_right = -11.360901
offset_bottom = -102.05151
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.1457772, 2.510561)
icon = ExtResource("5_8kip5")

[node name="Salir" type="Button" parent="Modal_Compra/TextureRect"]
layout_mode = 0
offset_left = 11.541468
offset_top = 9.805145
offset_right = 189.54147
offset_bottom = 187.80515
scale = Vector2(0.7274311, 0.6924364)
icon = ExtResource("9_5q8le")

[connection signal="button_down" from="TextureRect/Obtener" to="." method="_on_obtener_button_down"]
[connection signal="button_down" from="TextureRect/Ver" to="." method="_on_ver_button_down"]
[connection signal="button_down" from="TextureRect/Volver" to="." method="_on_volver_button_down"]
[connection signal="button_down" from="Modal_ads/Salir_ad" to="Modal_ads" method="_on_salir_ad_button_down"]
[connection signal="timeout" from="Modal_ads/Timer" to="Modal_ads" method="_on_timer_timeout"]
[connection signal="button_down" from="Modal_Compra/TextureRect/Compra" to="Modal_Compra" method="_on_compra_button_down"]
[connection signal="button_down" from="Modal_Compra/TextureRect/Salir" to="Modal_Compra" method="_on_salir_button_down"]
